--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -8,6 +8,8 @@
  * LICENSE.txt file in the root directory of this source tree.
  */
 
-import createHistory from 'history/createBrowserHistory';
-
-export default createHistory();
+.content {
+  margin: 0 auto;
+  max-width: 1000px;
+  width: 100%;
+}
